feat: lastDataUpdate
