# docs/swagger.json
@@ -405,6 +405,10 @@
             "description": "Health check status information",
             "type": "object",
             "properties": {
+                "lastDataUpdate": {
+                    "type": "string",
+                    "example": "2025-06-17T07:40:46Z"
+                },
                 "status": {
                     "type": "string",
                     "example": "ok"
